[package]
name = "energymon-default-sys"
version = "0.1.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libenergymon-default"
license = "MIT"
homepage = "https://github.com/connorimes/energymon-default-sys"
repository = "https://github.com/connorimes/energymon-default-sys"
keywords = ["energymon", "energymon-default", "energy", "monitoring", "bindings"]

build = "build.rs"

[dependencies]
libc = "0.1"

[dependencies.energymon-sys]
git = "https://github.com/connorimes/energymon-sys.git"

[build-dependencies]
pkg-config = "0.3.2"
